--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </Section>
         <div><b>Diagrams</b></div>
         <br>
-        <img src="img.png">
+        <img src="img.png" alt="A diagram during meeting">
         <br>
         <b>Video recording of the meeting</b>
         <br>
@@ -79,9 +79,9 @@
                 <input type="text" id="web" name="web">
                 <p>How are you doing today?</p>
                 <input type="checkbox" id="good" name="good" value="good">
-                <label for="food">Good</label>
+                <label for="good">Good</label>
                 <input type="checkbox" id="bad" name="bad" value="bad">
-                <label for="food">Bad</label>
+                <label for="good">Bad</label>
                 <p>What is your favorite programming language?</p>
                 <input type="radio" id="html" name="lang" value="html">
                 <label for="html">HTML</label>
