roughly first five bullet points

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <title>Meeting Minute</title>
     <meta charset="UTF-8">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-        <h1>Magic 8 Ball Brainstorm</h1>
+        <h1><span id="Intro">Magic 8 Ball Brainstorm</span></h1>
         <details>
             <Summary>Click here for the detailed explanation of Magic 8 Ball</Summary>
             <p>The Magic 8 Ball is a plastic sphere, made to look like an oversized eight ball , that is used for fortune-telling or seeking advice.</p>
